--- a/article/sg0/doc/0045.md
+++ b/article/sg0/doc/0045.md
@@ -51,33 +51,17 @@
 “那么，*Rintaro*，我来告诉你我的另一个工作吧。”  
 “……另一个工作？”  
 我回想起以前跳到其他世界线发生的事情。自卫队在美国组织的要求下要把我交到他们的基地，这是从下山那里得到的消息。  
-“<abbr title="美国中央情报局（Central Intelligence Agency）。直属美国总统的情报机构。为了保证美国的国家安全，从事外国谍报、情报收集、政治工作等活动。据说参与了很多历史事件。
-——来自游戏 Tips。">
-CIA
-</abbr>？
-<abbr title="美国国家安全委员会（National Security Council）。就美国国家安全政策向总统提供建议的白宫直属机构。由总统、副总统、国务卿、财政部长、国防部长组成。
-——来自游戏 Tips。">
-NSC
-</abbr>？”  
+“<abbr title="美国中央情报局（Central Intelligence Agency），直属美国总统的情报机构。为了保证美国的国家安全，从事外国谍报、情报收集、政治工作等活动，据说参与了很多历史事件。——来自游戏 Tips。">CIA</abbr>？<abbr title="美国国家安全委员会（National Security Council）。就美国国家安全政策向总统提供建议的白宫直属机构。由总统、副总统、国务卿、财政部长、国防部长组成。——来自游戏 Tips。">NSC</abbr>？”  
 雷斯吉宁对于我的猜测还以苦笑。  
-“被当成和他们一类真是令人遗憾啊。他们只是一群无能的公务员集合体。  
- 你知道
-<abbr title="(虚构)战略焦点社（Strategic Focus）。美国私人情报机构，也被称作“影之 CIA”。其运用独立的信息网，收集和分析世界的安全信息，受雇于众多知名企业和军事组织。
-他们本质上是盈利企业，根本上来说，和目的是破解极机密情报的“匿名者”，或是由那些义愤填膺的密告着公开资讯的“维基解密”组织的理念及方针是有差异的。
-并且，在美国德克萨斯州还实际存在着贩卖情报的“战略前瞻公司（Strategic Forecasting， Inc.），但是这个公司与他们无关。
-——来自游戏 Tips。">
-‘*Strategic Focus*’
-</abbr>
-这一美国私人情报机构吗？”  
-“*Strategic Focus*”？  
-接着，脑中突然闪过数个新闻报道。那是过去中二病全开时期在一个阴谋论整合网站上看到的。  
-“STRATFO！？”  
-据说，他们轻易地弄到了连 CIA 都难以获取的俄罗斯弹道导弹的最高机密情报并拿去交易。CIA 为此事颜面扫地，同时也动摇了俄罗斯军队的战略根基。还有传闻说，在海湾战争和伊拉克战争中，他们赶在各大组织之前率先获取了所有参战国的军事情报，根据需求散播到全球各地。全世界都称呼其为“影之 CIA”。  
-“你是…那个 STRATFO 的人……？  
+“被当成他们的同类真是令人遗憾啊，那只是一群无能的公务员集合体。  
+ 你知道 <abbr title="(虚构)战略焦点社（Strategic Focus），一个美国民间情报组织，也被称为“影之 CIA”。运用独立的信息网，收集和分析世界的安全信息，受雇于众多知名企业和军事组织。他们本质上是盈利企业，其理念和方针，和目的是破解机密情报的“匿名者”，或是追求信息公开透明的“维基解密”完全不同。这个组织为游戏虚构，与现实中美国德克萨斯州的“战略前瞻公司（Strategic Forecasting Inc.）无关。——来自游戏 Tips。">*Strategic·Focus*</abbr> 吗？一个美国民间情报组织。”  
+“*Strategic·Focus*……？STRATFO？！”    
+我在中二病时期，曾经在一个专门讨论阴谋论的网站上了解过。也被称为“影之 CIA”。据说，俄罗斯的弹道导弹相关的最高机密，连 CIA 都难以获取，他们却轻易得手后卖了出去，不仅让 CIA 颜面扫地，更是最终动摇了俄罗斯军队的战略根基。也有传言说，不管是海湾战争还是伊拉克战争，他们都赶在世界各大机构之前，获取了所有参战国的军事情报，并且根据需要卖给了各个国家。  
+“你是……那个 STRATFO 的人……？  
  可你不是脑科学研究所的主任吗……”  
-“当然，那个才是我的主业，毋庸置疑。  
+“当然，那才是我的主业，毋庸置疑。  
  话说回来，我常常会听人提倡这种论调：  
- ‘人类是一群会杀戮的猴子，  
+ ‘人类是一群会杀戮的猴子，
  只有人脑会因为发达的大脑新皮质而拥有狂热的信仰和野心，从而引发战争。’  
  我每次听到这话就会想，这种愚蠢的想法真是无法接受，简直一派胡言。  
  然而为何人类会无休止地进行无意义的战争呢，你知道吗，*Rintaro*？”  
