--- a/article/sg0/doc/0111.md
+++ b/article/sg0/doc/0111.md
@@ -1,6 +1,6 @@
 # 二律背反的双模 - 18
 > 1.053649  
-> [ 2011/01/15 ] 冈伦联系天王寺和铃羽设下埋伏，成功抓住在找篝的人。得知其来自 STRATFO，安排桶子骇入。  
+> [ 2011/01/15 ] 冈伦联系天王寺和铃羽设下埋伏，成功抓住在找篝的人。得知其来自 STRATFO，安排桶子黑入。  
 
 | [←prev](./0110) | [menu](../) | [next→](./0112) |
 
@@ -21,9 +21,9 @@
 “如果你老实点，就不会对你动粗。”  
 像是配合着这句话，男人构成的包围圈又进一步缩小了。女人只是一脸胆怯，没有要抵抗的样子。毫不费力——一个男人露出笑容，把手伸过去的瞬间——  
 “哦哦哦哦哦哦哦哦！！”  
-发出像是要撕裂空气般的叫声，男人捂住了自己伸出去的那只手蹲在了地上。三条跟香肠差不多的物体在地面上滚动着。  
+发出杀猪般的惨叫，男人捂住手蹲在了地上，三条跟香肠差不多的圆柱体滚落到地面上。  
 “嘎！”  
-在意识到那是男人的手指之前，这次是另一个的男人，脸上吃了一记踢击倒在了地上。之前还悠闲自得的男人们现在变得凶狠了起来。  
+在意识到那是男人的手指之前，另一个男人脸上吃了一记踢击倒在了地上。之前悠闲的男人们现在变得凶狠了起来。  
 “*You fuckin’ bitch!!*”  
 嘴上咒骂着一同向女性扑了过去。但是——  
 “嘎啊啊啊啊啊啊！”  
@@ -31,13 +31,13 @@
 “喂喂，安静点啊。要是动静闹得太大，对你们不也是个麻烦吗？”  
 一位魁梧的男人从黑暗中现身，背对着月光，用冰冷的声音说着。  
 
+![](../static/image/0111-3.png)
+
 “好厉害……”  
 看着他把那群身强力壮的男人们一个个击倒，我只能发出这样的感叹。天王寺的强大从他那魁梧的体格就可以体现，需要着重强调的是另一个人。铃羽不知何时解除了变装，随着如猫般灵巧的动作，男人们一个个都蹲在了地上。虽然知道铃羽受过战斗训练，没想到她认真起来，会强到这种地步。特别是那双修长的双腿的踢击，看上去就像是艺术一样。  
 “有一手啊，打工的。”  
 “店长也是呢。”  
-连拔刀掏枪都没来得及，男人们就倒在了地上。  
-
-![](../static/image/0111-3.png)
+甚至都没来得及拔刀掏枪，那群人就全部倒在了地上。  
 
 几天前——察觉出那群人的焦急心态，我想出了一个点子。在之前的世界线里萌郁说过，有什么人在搜索篝。说不定，在这条世界线上也是这样——所以我拜托萌郁，让她把消息放出去。“一名疑似椎名篝的人物，每天都会在差不多这个时间，从这条路走过”——这样的消息。数天后的现在，这群人完美地咬住了我们准备好的饵。我一个人躲在这小路的角落，没面子地看着铃羽他们战斗。但是，我就算出去了也派不上用场，反倒会碍手碍脚，交给那两个人处理才是正确的判断。  
 “你那边怎么样了？”  
@@ -48,13 +48,13 @@
 “那是，谁让她是我女儿呢。但是，要是她受伤了，冈伦，我恨你一辈子。”  
 需要担心的，是对面那群家伙。  
 “！？”  
-突然，附近响起了一声尖锐的口哨。随着这个信号，男人们四散而逃。那群家伙意识到是陷阱，一起开始逃跑了。  
+突然，附近响起一声尖锐的口哨。随着这个信号，那群家伙四散而逃，应该是意识到了这是陷阱。  
 “哎呀，想得美。”  
-天王寺如圆木般粗壮的手臂抓住了一个男人的手。但是——  
+天王寺如圆木般粗壮的手臂抓住了一个男人的手，但是——  
 “嘎——”  
 在听到清脆的破裂音的瞬间，被抓住的男人全身失去了力气。  
 “切——！”  
-怎么会……死了——？居然，自尽……  
+怎么会……死了——？居然，自尽了……  
 “叔叔，那边！”  
 铃羽的声音让我回过神来。其中一个逃走的人，向着我所在的小路这里赶来。我们的目的是抓住他们，让他们招认自己的身份。这样下去，好不容易抓住的线索就要没了！于是我拼尽全力，跳到男人面前。他看到突然出现的我，出现了一瞬间的犹豫。但是，他没有减速，继续向这边突进。他的腰间附近，有什么发光的东西。  
 “咕——！”  
@@ -70,11 +70,11 @@
 “冈伦！怎么了！？发生什么了？”  
 “别担心……这边全员安全。比起这个铃羽，那家伙呢！？”  
 被天王寺固定住的男人的嘴里，传来了一阵呜咽。不知什么时候，他的嘴里被塞进了毛巾一类的东西，应该是为了防止他像刚才那个家伙一样自尽的对策吧。  
-“喂喂，别乱动啊。弄出骚乱来有麻烦的是你们吧。  
- 何况不过才第一根手指而已，真不像话。还有九根哦？”  
+“喂喂，别乱动啊，弄出骚乱来有麻烦的是你们吧。  
+ 何况不过才第一根手指而已，真不像话，还有九根哦？”  
 “呜，呼……呼……”  
 “手指用完了还有眼睛，之后还有双耳和鼻子……可以享受的地方还多着呢。”  
-冷酷的声音。这才是，真正的天王寺裕吾——FB 的姿态。面对让人不由得想背过视线的状况，铃羽面不改色地看着。  
+冷酷的声音。这才是，真正的天王寺裕吾——SERN 的 Rounder，FB。面对让人不由得想背过视线的状况，铃羽面不改色地看着。  
 “我也不想做这些麻烦事啊。反正早晚要说的，早点说的话我觉得对双方都有好处啊？”  
 “呜呜呜呜呜！！！！”  
 “嗯？怎么样，要再来一根吗？”  
@@ -86,15 +86,14 @@
 “……STRATFO？喂，你没开玩笑吧？”  
 男人再次拼命地摇头。  
 “STRATFO 吗……又是个麻烦的家伙……”  
-STRATFO……我听说过。中二病时期，在网上调查过。”  
-“正式名称 <abbr title="neta 自现实中的 Strategic Forecasting Inc.">*Strategic·Focus*</abbr>，被称为“影之 CIA”，是美国的民间情报组织。特别强化了军事相关的能力，在海湾战争和伊拉克战争中，听说发挥了不少的作用。会被 SERN 的 Rounder 天王寺如此评价，想必不会是简单的对手。但是……现在不是胆小的时候。  
-“听到了吗，桶子！现在立刻骇进 STRATFO！”  
+我在中二病时期，曾经在一个专门讨论阴谋论的网站上看到过。正式名称 *Strategic·Focus*，一个美国民间情报组织，也被称为“影之 CIA”。据说，俄罗斯的弹道导弹相关的最高机密，连 CIA 都难以获取，他们却轻易得手后卖了出去，不仅让 CIA 颜面扫地，更是最终动摇了俄罗斯军队的战略根基。也有传言说，不管是海湾战争还是伊拉克战争，他们都赶在世界各大机构之前，获取了所有参战国的军事情报，并且根据需要卖给了各个国家。能被天王寺评价为麻烦，想必不会是简单的对手。但是……现在不是胆小的时候。  
+“听到了吗？桶子，现在立刻黑进 STRATFO！”  
 “*Okey-dokey!*”  
-姑且算是达成了目的，全身快要脱力了。但是，还不能这样。接下来才是重头戏。  
-“……”  
+姑且算是达成了目的，全身快要脱力了。但是，还不能松懈，接下来才是重头戏。  
+“呣……”  
 “怎么了，店长，有什么在意的地方吗？”  
-“不，STRATFO 可是民间机构啊。换句话说，是为了金钱而受雇佣的家伙。  
- 这样的家伙，就算被抓住，至于要自杀吗？”  
+“不，STRATFO 可是民间组织啊。换句话说，是为了钱接受雇佣的家伙。  
+ 这样的家伙，就算被抓住，至于自杀吗？”  
 这么一说还真是有些奇怪。  
 “喂，你，真的是——！”  
 天王寺又一次拽起了男人的衣领。  
