统一用法：黑客

--- a/article/sg0/doc/0012.md
+++ b/article/sg0/doc/0012.md
@@ -32,7 +32,7 @@
 “这话应该用在你自己身上。”  
 “对不起，爸爸错了……  
  不过呐，你知道我的地下工作吧？那可是很忙的。  
- 向我这种超级骇客多少人抢着要呢！  
+ 向我这种超级黑客多少人抢着要呢！  
  连饭都只能随便对付了啊喂！  
  而且跟国外的主顾有时差，昼夜颠倒了啊喂！”  
 “未来的你总是找这些借口，经常招来妈妈的一顿臭骂。”  
