--- a/article/sg0/doc/0110.md
+++ b/article/sg0/doc/0110.md
@@ -1,6 +1,6 @@
 # 二律背反的双模 - 17
 > 1.053649  
-> [ 2011/01/11 ] 篝的情况已经恶化到遗忘真由理并晕倒，目前留在柳林神社由真由理和琉华子照顾。回到 LAB，骇入 SERN、制作『时间跳跃机』完成。真帆得知酒店房间遭窃，推测目标是红莉栖笔记本电脑和硬盘。  
+> [ 2011/01/11 ] 篝的情况已经恶化到遗忘真由理并晕倒，目前留在柳林神社由真由理和琉华子照顾。回到 LAB，黑入 SERN、制作『时间跳跃机』完成。真帆得知酒店房间遭窃，推测目标是红莉栖笔记本电脑和硬盘。  
 
 | [←prev](./0109) | [menu](../) | [next→](./0111) |
 
@@ -119,7 +119,7 @@
 “那这么说，笔记本电脑……”  
 “没事哟。对吧？”  
 “当然，现在在我的秘密基地里呢。  
- 不过，最近一直都奋斗于骇入 SERN 的事，还没有开始解析密码呢。”  
+ 不过，最近一直都奋斗于黑入 SERN 的事，还没有开始解析密码呢。”  
 听到这话我安心了。如果能通过这件事，弄清楚闯入真帆房间进行偷窃的是谁就好了……但是应该不会轻易如愿吧。但是，已经开始如此行事，可以肯定，那群家伙现在很焦急。下次究竟会用什么手段呢……等一下——  
 “……说不定，可以利用这一点。”  
 “利用……？”  
