--- a/article/sg0/doc/0130.md
+++ b/article/sg0/doc/0130.md
@@ -105,7 +105,7 @@
 “虽然你说得这么轻松，我们研究所服务器的防御措施可是很厉害的哦。”  
 “不要紧的，毕竟桶子是超级嗨客嘛。”  
 “要说的话应该是超级黑客啊。”  
-桶子可是仅仅用了 20 个小时就成功骇入了那个 SERN 的男人，我对他有着绝对的信任。桶子和真帆认真地盯着显示屏，并讨论着什么。应该是为了更方便入侵，在了解详细的信息吧。  
+桶子可是仅仅用了 20 个小时就成功黑入了那个 SERN 的男人，我对他有着绝对的信任。桶子和真帆认真地盯着显示屏，并讨论着什么。应该是为了更方便入侵，在了解详细的信息吧。  
 
 在此期间我也要做些力所能及的事。我走向了开发室里面，打开了今天早上刚买来的箱子。真由理在我身后探头看着。  
 “哇，是微波炉酱\~”  
