--- a/article/sg0/doc/0131.md
+++ b/article/sg0/doc/0131.md
@@ -49,7 +49,7 @@
 “稍等——”  
 桶子一边说一边向电脑输入什么。”  
 “STRATFO 的服务器……嗯……好了。”  
-不愧是曾经骇入过，这次要比入侵大学服务器的速度快多了。  
+不愧是曾经黑入过，这次要比入侵大学服务器的速度快多了。  
 “找那个『Amadeus』的系统数据就行了吧？”  
 “等一下！”  
 真帆夺过桶子的鼠标，点开了某个文件夹，里面似乎是很多文档。  
