--- a/article/sg0/doc/0112.md
+++ b/article/sg0/doc/0112.md
@@ -1,6 +1,6 @@
 # 二律背反的双模 - 19
 > 1.053649  
-> [ 2011/01/15 ] LAB 被包围，篝的身体濒临崩溃，情况千钧一发。桶子骇入 STRATFO 成功得到篝的记忆。P4：是否接听电话覆盖篝的记忆？  
+> [ 2011/01/15 ] LAB 被包围，篝的身体濒临崩溃，情况千钧一发。桶子黑入 STRATFO 成功得到篝的记忆。P4：是否接听电话覆盖篝的记忆？  
 
 | [←prev](./0111) | [menu](../) | [拒绝接听→](./0113) |  
 |                 |             | [接听电话→](./0123) |
@@ -9,9 +9,9 @@
 
 好不容易赶到了 LAB，真由理和菲莉丝她们全员都在。篝也在……痛苦地喘着粗气，精疲力尽地靠在沙发上。呼吸紊乱，脸色糟糕，感觉随时会撑不住的样子。  
 “桶子……怎么样了？”  
-“稍微等一下。因为有以前骇进去时留下的路线，现在正在找。”  
+“稍微等一下。因为有以前黑进去时留下的路线，现在正在找。”  
 “之前……你、做过这么危险的事情吗！？”  
-“稍微和朋友打了个赌，比谁能更快骇进去，赌资是一年的 GOGO 咖喱。”  
+“稍微和朋友打了个赌，比谁能更快黑进去，赌资是一年的 GOGO 咖喱。”  
 这家伙……做事真是不怕危险。  
 “啊咧？不问问哪边赢了吗？”  
 看这态度，不用问也知道结果了吧。  
