--- a/article/sg0/doc/0004.md
+++ b/article/sg0/doc/0004.md
@@ -69,7 +69,7 @@
 之后，我一边回忆着红莉栖的理论，一边忘我的说着。  
 对于我凭着模糊的记忆说出的术语，比屋定真帆把我的意思补充完整。  
 “——于是，在最后，在往侧额叶重新返写记忆的过程中，嗯……  
- 一同被拷贝了的模拟脉冲会往前脑叶那边输送，记忆检索信号就会正常的运作起来，我是这么想的。”  
+ 一同被复制了的模拟脉冲会往前脑叶那边输送，记忆检索信号就会正常的运作起来，我是这么想的。”  
 “你是……自己发现的这个吗？”  
 “诶？啊，不是……”  
 比屋定真帆再次看向我刚才给她的名片。  
