--- a/article/sg0/doc/0036.md
+++ b/article/sg0/doc/0036.md
@@ -100,12 +100,11 @@
 “……其实我也有过，这个电脑被人盯上了的预感。  
  只不过，你说的话和我的预测差的太远了……”  
 “你的预测是？”  
-“我曾想过会不会是『Amadeus』的军事转用之类的事。”  
-“军事转用……？”  
-“红莉栖经常出入精神生理学研究所，她说会时不时地在那边看到无关人员。  
- 说不定是国防总省的人。”  
+“我曾想过会不会是想要把『Amadeus』用于军事之类的。”  
+“军事……？”  
+“红莉栖说过，她时不时会在精神生理学研究所看到无关人员，说不定是国防总省的人。”  
 “『Amadeus』能够杀人吗？要怎么做到？”  
-“比如说，拷贝身经百战的飞行员的记忆数据，写入无人战斗机的控制程序里什么的。  
+“比如说，复制身经百战的飞行员的记忆数据，写入无人战斗机的控制程序里。  
  还有，以前说过的在医疗方面的应用，还记得吗？”  
 “那个……向人类的大脑里重新写入记忆数据什么的？”  
 “对。如果能实现记忆数据的修改并重新写入，就可能制造出‘没有恐惧感的士兵’，  
