--- a/article/sg0/doc/0087.md
+++ b/article/sg0/doc/0087.md
@@ -1,6 +1,6 @@
 # 存在证明的自动机械 - 13
 > 1.081163  
-> [ 2011/01/05 真帆视角 ] 朱蒂·莱耶丝杀死雷斯吉宁，逼迫真帆解锁『Amadeus』不可侵领域并更改最高管理员。疑似打算将『Amadeus』转为军事用途。  
+> [ 2011/01/05 真帆视角 ] 朱蒂·莱耶丝杀死雷斯吉宁，逼迫真帆解锁『Amadeus』不可侵领域并更改最高管理员。疑似打算将『Amadeus』用于军事。  
 
 | [←prev](./0086) | [menu](../) | [next→](./0088) |
 
@@ -39,7 +39,7 @@
 “凭大学的工资，有点担心自己的老年生活啊\~你看，我也没有男人缘。  
  所以，就跳槽到能赚更多钱的单位咯\~”  
 听到这里，真帆明白了莱耶丝的目的。  
-“你，想将『Amadeus』转为军事用途吧……！？”  
+“你，想将『Amadeus』用于军事吧……！？”  
 “啊……！”  
 “我不会回答的哦。我都说了，全都知道了的话，就不得不杀掉你了。”  
 “明明已经杀了雷斯吉宁教授，亏你还能说这种话……”  
