--- a/article/sg0/doc/0045.md
+++ b/article/sg0/doc/0045.md
@@ -125,14 +125,13 @@
  至此我们就能率先一步引领这个世界。”  
 “喀咕……（咬牙切齿）”  
 “话说回来……你为什么不早点告诉我那个能力的事情呢？  
- 这样的话，你的朋友——*Katsumi* 的脑袋也不必被我翻弄到那种地步了。”  
+ 这样的话，你的朋友——*Katsumi*（克美）的脑袋也不必被我翻弄到那种地步了。”  
 “什……！”  
-*Katsumi*，中濑克美——是说吹雪吗！  
 “而且，如果你早告诉我，我也不用对 *Maho* 的大脑实施手术了。”  
 “你连比屋定都……！？”  
 之前表现得那么不对劲就是这个原因吗！？  
-“她可是你的助手啊！？明明那么尊重你，仰慕你！  
- 这种人体实验一样的行为！你竟敢！！”  
+“她可是你的助手啊！？她明明那么尊重你，仰慕你！  
+ 这明明就是人体实验！你竟敢！！”  
 “这是为了获得之后会对人类产生贡献的情报，所必须付出的代价。  
  而且，你不需要那么慌张。  
  *Maho* 和 *Katsumi*，将来应该只会稍微有一点点脑功能障碍而已。”  
@@ -140,11 +139,11 @@
 我在此刻第一次感受到，眼前的男人是如此的让人恶心——同时也感到恐怖。  
 完全无法相信，眼前的人和我之前无比尊敬的人竟然是同一个人。  
 “如果研究透了 *Reading·Steiner* 持有者的大脑，应该能有更多地发现吧。  
- 然后把它和时间机器配套卖出去，就能完美地保持世界的军事平衡。  
- 同时也能避免战争。也请你务必提供协助。”  
+ 把它和时间机器配套卖出去，就能完美地保持世界的军事平衡，同时也能避免战争。  
+ 请你务必提供协助。”  
 雷斯吉宁一边说着如此恐怖的事情，神态却一如往常。他以比屋定数落他时所说的“顽皮的孩子”的那种天真感，很开心地畅谈着疯狂的计划。  
-“你骗我！你接近我，只是因为我和红莉栖关系亲密，想从我这套出红莉栖生前的情报吧！”  
-“我没打算骗你啊。  
+“你骗了我！你接近我，只是因为我和红莉栖关系亲密，想从我这套出红莉栖生前的情报吧！”  
+“我本来没打算骗你啊。  
  和你最初的相遇纯粹是偶然。  
  拜托你担任『Amadeus』的测试员，主要也只是因为你是 *Kurisu* 的朋友。  
  不过在逐渐认识你之后，单纯对你本人产生了兴趣也是真的。  
@@ -160,7 +159,7 @@
  把你的记忆用作『Amadeus』系统，是个很有趣的主意吧？  
  如此一来，即使你由于意外事故死亡，你的记忆也会留存下来。”  
 “…………”  
-“啊，别紧张。我本来就没有要杀掉你的打算。  
+“啊，别紧张，我本来就没有要杀掉你的打算。  
  跟『Amadeus』比起来，人类自身的安全防护机制太过简单。  
  只要稍微尝点苦头，就会为了脱离困境，轻易地把情报泄露出去。  
  隐藏秘密的安全防护机制等同于无。  
