--- a/article/sg0/doc/0147.md
+++ b/article/sg0/doc/0147.md
@@ -162,7 +162,7 @@
 
 “那么，*Rintaro*，这些事就说到这。有件事我想确认下——”  
 雷斯吉宁教授把视线转向了我的后方。  
-“圣诞派对那会儿我就觉得，你的这些 *girl friend* 们都是些很 *cute* 的姑娘呢。”  
+“圣诞派对那会儿我就觉得，你的这些女性朋友们都是些很 *cute* 的姑娘呢。”  
 “诶？”  
 我转身看向那边，真由理、枫、还有由季都从沙发上站了起来看着这边。她们注意到了雷斯吉宁教授的视线，轻轻地挥了挥手。  
 “果然，这里面的其中一位就是你的恋人吧？  
