统一称呼：比屋定 --> 真帆，经过菲莉丝家浴室事件、夜里坦白后两人心理距离应该更近了

--- a/article/sg0/doc/0141.md
+++ b/article/sg0/doc/0141.md
@@ -109,10 +109,10 @@
 “不要！”  
 桶子和比屋定尖叫着，但这些突然间都失去了真实感，感觉好像发生在很遥远的地方，听说人在突然面对死亡的时候都会这样——反正我不是死在这里的吧？我问自己，问不在场的铃羽，问这个世界……当然，没有人能回答我。也许不会死的事实，和这种情况下能不能做点什么，毫无关系。脖子被人用刀抵着，我这个区区大学生，早已经被超出极限的恐惧笼罩了。即使已经见过无数次他人的死亡，轮到自己果然还是不习惯。这又让我不禁回想起了红莉栖的鲜血，过去的回忆向我袭来。我全身颤抖着，几乎要瘫坐在地上。已经……什么都做不了了吗？  
 
-快要放弃的时候，狭窄的小路前方，一辆黑色面包车急停下来，堵在了那个和其他道路交叉的 T 字路口。车侧面的滑门打开，跳下来好几个手持小型自动步枪的男人，全员都身穿灰色军装，头戴只露出眼睛的巴拉克拉法帽，一看就知道是军队的士兵。而且从强壮的体格和肤色上看，明显不是日本人。我立刻反应过来，这是真实的，不是什么 cosplay，那些枪是真的。我的大脑提醒我，这里即将展开战斗。8 月 13 日的袭击，以及持续到前几天为止的、处在战争状态的世界线得来的经验，在这一瞬间苏醒了。  
-“全员隐蔽！”  
-是敌是友并不重要，桐生萌郁在我发声的同时也做出反应。她确认了闯入者的样子，毫不犹豫地冲入旁边建筑的阴影中，其他 Rounder 也一起向周围散开。比屋定被放开后，站在路中央慌张地四处张望。”  
-“真帆，趴下！”  
+快要放弃的时候，狭窄的小路前方，一辆黑色面包车急停下来，堵在了那个和其他道路交叉的 T 字路口。车侧面的滑门打开，跳下来好几个手持小型自动步枪的男人，全员都身穿灰色军装，头戴只露出眼睛的巴拉克拉法帽，一看就知道是军队的士兵。而且从强壮的体格和肤色上看，明显不是日本人。我立刻反应过来，这是真实的，不是什么 cosplay，那些枪是真的。我的大脑提醒我，这里即将展开战斗。8 月 13 日的袭击，以及持续到前几天为止的、处在战争时期的世界线得来的经验，在这一瞬间苏醒了。  
+“快躲起来！”  
+是敌是友并不重要，桐生萌郁在我发声的同时也做出反应。她确认了闯入者的样子，毫不犹豫地冲入旁边建筑的阴影中，其他 Rounder 也一起向周围散开。比屋定被放开后，站在路中央慌张地四处张望。  
+“比屋定小姐，趴下！”  
 
 ![](../static/image/0141-5.png)
 
