--- a/article/sg0/doc/0144.md
+++ b/article/sg0/doc/0144.md
@@ -6,15 +6,15 @@
 
 ---
 
-接下来的几天里，我和比屋定都在菲莉丝家受其照顾。由于红莉栖的笔记本电脑和硬盘已经不存在了，所以我们今后被盯上的可能性降低了，但也并不是零。以防万一，还是不要靠近 LAB 了。  
+接下来的几天里，我和真帆都在菲莉丝家受其照顾。由于红莉栖的笔记本电脑和硬盘已经不存在了，所以我们今后被盯上的可能性降低了，但也并不是零。以防万一，还是不要靠近 LAB 了。  
 
 “*Maho! Rintaro!*”  
 许久不见的雷斯吉宁教授，看起来有些憔悴。  
 “教授，太好了，你没事……”  
 “*Maho*，你也辛苦了。”  
-雷斯吉宁教授用巨大的身体抱紧了小小的比屋定。由于体型相差太多，比屋定看起来就像一个布娃娃。  
+雷斯吉宁教授用巨大的身体抱紧了小小的真帆。由于体型相差太多，真帆看起来就像一个布娃娃。  
 “教授，难受……好难受……”  
-今天是雷斯吉宁教授和比屋定回国的日子，由于是工作日的白天，所以来机场送行的只有我。与其说是送行，不如说是我带比屋定过来和教授会合。因为比屋定连独自来机场都无法做到，生活能力这么差居然也能活到这个岁数。顺便一提，比屋定的欢送会昨天晚上在菲莉丝家已经开过了。不只是菲莉丝，真由理和桶子，还有参加了圣诞节派对的人都来了，大家都很舍不得分别。  
+今天是雷斯吉宁教授和真帆回国的日子，由于是工作日的白天，所以来机场送行的只有我。与其说是送行，不如说是我带真帆过来和教授会合。因为真帆连独自来机场都无法做到，生活能力这么差居然也能活到这个岁数。顺便一提，真帆的欢送会昨天晚上在菲莉丝家已经开过了。不只是菲莉丝，真由理和桶子，还有参加了圣诞节派对的人都来了，大家都很舍不得分别。  
 “*Rintaro*，谢谢你一直陪着 *Maho*，真的麻烦你了。”  
 “没事。”  
 “还有，你什么时候来我们的研究室呢？”  
@@ -40,7 +40,7 @@
 “是啊，不需要吗？”  
 “在和我道别之前，你应该和真帆前辈好好道别过了吧？”  
 “已经好好道别过了。”  
-一旁的比屋定抢先替我回答了。  
+一旁的真帆抢先替我回答了。  
 “那就好。”  
 “红莉栖”终于露出了标志性的、单眼眯起的得意笑容。她，就存在于屏幕里。和她这样聊天，对我来说真的是好事吗？还是，坏事呢？虽然想着一定要忘记牧濑红莉栖，但结果，我始终难以释怀，无法从那个诅咒中逃离。  
 “没有了访问权限的话，以后就再也见不到了吧。”  
@@ -65,9 +65,9 @@
 画面中的“红莉栖”消失了。我向教授点点头，然后删除了手机里的『Amadeus』APP。  
 “访问权限的解除，之后我们这边会操作的。感谢你作为测试员协助我们，提供了珍贵的数据。”  
 “我才要感谢你们给我这次机会。”  
-我对着雷斯吉宁教授和比屋定，深深鞠了一躬。  
+我对着雷斯吉宁教授和真帆，深深鞠了一躬。  
 
-目送雷斯吉宁教授和比屋定乘坐的飞机离去时，我注意到，自己的心里好像开了一个洞，这种感觉折磨着我，只能用力握紧已经失去和『Amadeus』联系的手机。  
+目送雷斯吉宁教授和真帆乘坐的飞机离去时，我注意到，自己的心里好像开了一个洞，这种感觉折磨着我，只能用力握紧已经失去和『Amadeus』联系的手机。  
 
 
 <br/>
