--- a/article/sg0/doc/0146.md
+++ b/article/sg0/doc/0146.md
@@ -29,12 +29,12 @@
 我家的【冈部青果店】，位于一条古老的商业街中，建成差不多有 40 年了，残破得很，是时候该重新装修一下了。  
 注意力没法集中了，还有不到 15 分钟真由理就到了，今天的学习就到这吧。上午把该读的都读过了，嗯，也算是可以吧。我都有些吃惊于自己最近的专注度，因为有了目标，简直干劲满满，我必须尽早达到去维克多·孔多利亚大学的条件。  
 （维克多·孔多利亚大学啊……）  
-我和比屋定有定期互发邮件和 RINE。她好像每天都在夜以继日地研究，总是一副睡眠不足的样子。  
+我和真帆有定期互发邮件和 RINE。她好像每天都在夜以继日地研究，总是一副睡眠不足的样子。  
 我拿出了手机，下意识地在桌面寻找某个图标。但是，那个图标半年前就被我亲手删除了。  
 
 ![](../static/image/emoji/app-amadeus.png)
 
-不知道“红莉栖”现在还好吗？那家伙的话……肯定是在宣扬有点难懂的理论，或者开比屋定的玩笑吧。说不定还会瞒着比屋定，自己偷偷去看 @ch。也对，“红莉栖”也能上网浏览信息，因此看 @ch 并不奇怪。不过除此之外——  
+不知道“红莉栖”现在还好吗？那家伙的话……肯定是在宣扬有点难懂的理论，或者开真帆的玩笑吧。说不定还会瞒着真帆，自己偷偷去看 @ch。也对，“红莉栖”也能上网浏览信息，因此看 @ch 并不奇怪。不过除此之外——  
 （『Amadeus』也能在网络留言板上发帖吗？）”  
 去年夏天，红莉栖为了驳倒约翰.提托，也拼命在 @ch 上发帖，虽然那是 α 世界线的事……这代表，红莉栖并不排斥在网络上发帖，那么“红莉栖”也有可能做同样的事情。『Amadeus』如果暂时获得联网许可，或许……我打开网页浏览器，几乎不抱期待地，试着搜索了那个不可能忘掉的网名——『栗悟饭和龟波功』——红莉栖过去在用的固定ID。  
 “哇哦！”  
@@ -48,14 +48,14 @@
 
 怀念和寂寥感，涌上心头。我正要关掉网页浏览器，却发现还有下一个帖子。看到上面标注的发帖日期，我一下子呆住了，然后将脸凑近手机屏幕，近乎执着地反反复复确认着那个日期——2010 年 12 月 1 日。  
 （这，难道是……？）  
-红莉栖死于 2010 年 7 月，因此，这不可能是红莉栖本人发的。那会是谁呢？毫无关系的人冒用了『栗悟饭和龟波功』？还是说……帖子没有带上用来确认个人身份的识别码，所以无法判断。不过去年 12 月 1 日，是比屋定和雷斯吉宁教授刚来日本不久，让我和“红莉栖”第一次会面的那一天……在那之后，『栗悟饭和龟波功』，以每周一次左右的频率持续发帖。我试着查了最新的日期——  
+红莉栖死于 2010 年 7 月，因此，这不可能是红莉栖本人发的。那会是谁呢？毫无关系的人冒用了『栗悟饭和龟波功』？还是说……帖子没有带上用来确认个人身份的识别码，所以无法判断。不过去年 12 月 1 日，是真帆和雷斯吉宁教授刚来日本不久，让我和“红莉栖”第一次会面的那一天……在那之后，『栗悟饭和龟波功』，以每周一次左右的频率持续发帖。我试着查了最新的日期——  
 （不就是昨晚吗！）  
-内容是关于相对论的，话风依然是老样子，在 @ch 上就很毒舌呢，喂……不过认真想一想，她好像当面也是这么说话的。假如这不是冒用，而是那个“红莉栖”发表的——这是多么荒谬又神奇啊。比屋定和雷斯吉宁教授知道这种事吗？应该不知道吧……因为“红莉栖”是绝对不会说的。我情不自禁地笑了起来。  
-试着联系她一下吧？我想要确认，这个『栗悟饭和龟波功』背后是不是“红莉栖”。于是，我突然想到了一个很好的网名——『萨列里的邻居』。当然了，灵感来源于比屋定的 ID。假如『栗悟饭和龟波功』的背后就是“红莉栖”，看到这个名字，会做出相应的反应吧？  
+内容是关于相对论的，话风依然是老样子，在 @ch 上就很毒舌呢，喂……不过认真想一想，她好像当面也是这么说话的。假如这不是冒用，而是那个“红莉栖”发表的——这是多么荒谬又神奇啊。真帆和雷斯吉宁教授知道这种事吗？应该不知道吧……因为“红莉栖”是绝对不会说的。我情不自禁地笑了起来。  
+试着联系她一下吧？我想要确认，这个『栗悟饭和龟波功』背后是不是“红莉栖”。于是，我突然想到了一个很好的网名——『萨列里的邻居』。当然了，灵感来源于真帆的 ID。假如『栗悟饭和龟波功』的背后就是“红莉栖”，看到这个名字，会做出相应的反应吧？  
 
 ![](../static/image/0146-1.png)
 
-编辑好了……发送。接下来会怎么样呢？我故意用了挑衅性质的语气，并且多多少少混进了一些错误的内容。虽然由我自己来说可能不合适，但是我觉得，我比雷斯吉宁教授和比屋定他们更了解红莉栖。  
+编辑好了……发送。接下来会怎么样呢？我故意用了挑衅性质的语气，并且多多少少混进了一些错误的内容。虽然由我自己来说可能不合适，但是我觉得，我比雷斯吉宁教授和真帆他们更了解红莉栖。  
 “哼哼哼……应该会轻易上钩的，如果是‘红莉栖’的话……”  
 
 “冈\~伦。”  
