--- a/article/sg0/doc/0147.md
+++ b/article/sg0/doc/0147.md
@@ -103,7 +103,7 @@
 ……真是和小孩子一样的强词夺理，太明显了吧。但是，不可思议地我并不觉得讨厌。  
 “不过我很惊讶，教授居然又来日本了。”  
 1 月在成田机场送别他们之后，已经有 5 个月没见了。  
-我四周观望寻找比屋定的身影，结果没有看到。
+我四周观望寻找真帆的身影，结果没有看到。
 
 “*Rintaro* 你有哪里不舒服吗？来这里接受治疗？”  
 “啊，不，不是的，是来探望一位住院的朋友。”  
@@ -169,7 +169,7 @@
  *Yuki*（由季）？*Kaede*（枫）？*Mayuri*（真由理）？  
  *Ruka*（琉华）？还是说，就是 *Katsumi* （克美）吗？”  
 “啥！？”  
-我对这突如其来的问题哑口无言。比屋定一直说这位中年教授就是个“爱淘气的少年”，现在他的表情正像她所说的那样。  
+我对这突如其来的问题哑口无言。真帆一直说这位中年教授就是个“爱淘气的少年”，现在他的表情正像她所说的那样。  
 “哎呀，我不会勉强你一定要告诉我，也并不想探究你的个人隐私。  
  嘛，只是想回去的时候，和可爱的学生聊一些旅行趣闻而已啦。”  
 “？？？”  
@@ -187,7 +187,7 @@
 刚才和雷斯吉宁教授聊的那些内容，完全不能告诉这几位女性啊……  
 
 吹雪的检查结束了以后，在病房里听她发了发牢骚，这天的探望就这么结束了。吹雪就如同雷斯吉宁教授说的那样，一直都很精神，还豪言道现在就能马上出院，跑着回家。看到那种样子，真由理她们多少安下心来，但是我却仍然有各种各样的烦恼。  
-果然，还是应该告诉雷斯吉宁教授有关 *Reading·Steiner* 的事比较好吗？但是，究竟应该怎么说起……实在不行，拜托比屋定和雷斯吉宁教授说明应该也行。然而我无法立刻得出结论。  
+果然，还是应该告诉雷斯吉宁教授有关 *Reading·Steiner* 的事比较好吗？但是，究竟应该怎么说起……实在不行，拜托真帆和雷斯吉宁教授说明应该也行。然而我无法立刻得出结论。  
 
 和枫还有由季在中途的车站分别了。到达池袋站之前，我突然想起一件事，立刻打开了手机的网页浏览器。为了确认白天撒下的诱饵现在情况如何，我连上了 @ch。  
 “啊……！”  
