--- a/article/sg0/doc/0151.md
+++ b/article/sg0/doc/0151.md
@@ -1,6 +1,6 @@
 # 弹性界限的认知 - 07
 > 1.129954  
-> [ 2011/07/03 ] 比屋定偷偷来到日本，冈伦、真由理、菲莉丝三人偷偷来到机场接机。  
+> [ 2011/07/03 ] 真帆偷偷来到日本，冈伦、真由理、菲莉丝三人偷偷来到机场接机。  
 
 | [←prev](./0150) | [menu](../) | [next→](./0152) |
 
@@ -10,7 +10,7 @@
 “好多人啊\~好像越来越多了。”  
 “小看星期天的机场了喵。”  
 “别看漏了哦，真由理，菲莉丝，毕竟对方真的很小只。”  
-我们三人正在这接机比屋定，已经快一个小时了。琉华子有事没能过来，只好在 RINE 上拜托我替他问好。  
+我们三人正在这接机真帆，已经快一个小时了。琉华子有事没能过来，只好在 RINE 上拜托我替他问好。  
 “冈伦，刚刚的问题发言，可是必须要跟她本人告状喵\~”  
 “开玩笑的，别这样。”  
 “但是，怎么等都不来呢。”  
@@ -23,7 +23,7 @@
 我苦笑着接近旅行箱，然后轻轻在上面敲了敲。  
 “比屋定小姐。”  
 “……诶？”  
-比屋定正以前倾的姿势拼命推着旅行箱，看到我后整个人愣住了。  
+真帆正以前倾的姿势拼命推着旅行箱，看到我后整个人愣住了。  
 “好久不见，恭喜你平安入境。”  
 “你你你你……？”  
 “感觉你很憔悴啊，没事吧？”  
@@ -43,7 +43,7 @@
 “嘟嘟……？”  
 “嘟嘟噜\~♪”  
 “好想你喵\~！真帆喵！”  
-真由理紧紧握住比屋定的手，一旁的菲莉丝则紧紧抱住她的身体。  
+真由理紧紧握住真帆的手，一旁的菲莉丝则紧紧抱住她的身体。  
 “真由理小姐和菲莉丝小姐也是，好久不见。  
  两位也特意来接我，谢谢了。  
  ……顺便，能不能别在这种地方大声喊我‘真帆喵’？”  
@@ -54,9 +54,9 @@
 “比屋定小姐，行李给我吧。”  
 “啊，嗯，谢谢……”  
 “不过，你这次来日本还真匆忙啊。这次也是为了协助雷斯吉宁教授吗？”  
-短短几天之前，才听比屋定说要来日本。  
+短短几天之前，才听真帆说要来日本。  
 “啊——这个嘛……呃……”  
-比屋定突然扭扭捏捏地，眼睛不时地偷看我的表情。  
+真帆突然扭扭捏捏地，眼睛不时地偷看我的表情。  
 “……冈部先生经常和雷斯吉宁教授联系吗？”  
 “啊。教授不是一直在这边做研究吗？时不时会邀请我一起吃饭，真是我的荣幸。”  
 “这、这样啊……麻烦了呢……”  
@@ -110,12 +110,12 @@
 “比屋定小姐，大概，那个，稍微再……怎么说呢……  
  穿衣打扮什么的，稍微注意一下试试看的话，这样就会更……”  
 “……”  
-我拼命寻找词汇想要替她打气，结果话不知不觉变得很刺耳。意料之中的，比屋定开始赌气了。  
+我拼命寻找词汇想要替她打气，结果话不知不觉变得很刺耳。意料之中的，真帆开始赌气了。  
 “我现在这样子就足够了！因为摆在第一位的是研究！”  
 “但是但是，这样的话，如果有了心上人可怎么办喵？没法向对方传达心意，会很困扰喵。”  
 “……哼！没问题啦，那种人是不会有的，才不会因此困扰。”  
 
-比屋定这时，稍微有些刻意地打了个哈欠。  
+真帆这时，稍微有些刻意地打了个哈欠。  
 “……抱歉，因为时差加上坐了这么久飞机，有些困了……”  
 “我懂喵，时差犯困的确很要命喵。豪华轿车已经准备好了，真帆喵可以好好睡下喵。”  
 “豪、豪华轿车！？”  
@@ -127,7 +127,7 @@
 “这个嘛，毕竟还有副业要做——”  
 “副业？就是说，除了『Amadeus』还在做些其他的吗？”  
 “啊！”  
-比屋定慌张地捂住自己的嘴。  
+真帆慌张地捂住自己的嘴。  
 “呃……这个是那什么……商业机密的说。”  
 “这样啊，抱歉啊。”  
 的确，美国的大学研究室里，这种研究还蛮多的，听说商业间谍也很多。一不小心泄露了情报的话，大概就不单单是被开除的问题了。是随口提问的我太轻率了。  
@@ -136,12 +136,12 @@
 “赌上人生……？”  
 “桶子君呢，现在，在约会中哦\~”  
 “……”  
-比屋定整个人明显呆住了。  
+真帆整个人明显呆住了。  
 “我……我真是累过头了呢，出现了很严重的幻听。”  
 “不，虽然你会这么想也没办法……”  
 “真的是约会哟。”  
 “诶诶！？难以置信！骗人的吧？那个 HENTAI 竟然！？”  
-终于连比屋定也开始叫他 HENTAI 了吗……听说平时桶子也会和比屋定网聊，不难想象他的言行举止啊。不过事实上，如果桶子不好好努力的话，这个世界的因果律会乱套的。在这层意义上，今天桶子的约会，可以说是宇宙规模的大事件。  
+终于连真帆也开始叫他 HENTAI 了吗……听说平时桶子也会和真帆网聊，不难想象他的言行举止啊。不过事实上，如果桶子不好好努力的话，这个世界的因果律会乱套的。在这层意义上，今天桶子的约会，可以说是宇宙规模的大事件。  
 
 
 <br/>
