--- a/article/sg0/doc/0154.md
+++ b/article/sg0/doc/0154.md
@@ -1,6 +1,6 @@
 # 无限远点的牵牛星 - 02
 > 1.129954  
-> [ 2011/07/07 ] 冈伦发现了桶子在研究电话微波炉，激动地大骂。这时比屋定出现。  
+> [ 2011/07/07 ] 冈伦发现了桶子在研究电话微波炉，激动地大骂。这时真帆出现。  
 
 | [←prev](./0153) | [menu](../) | [next→](./0155) |
 
@@ -21,7 +21,7 @@
 “冈伦带来的消息没有一次是好的。”  
 “好了，听着，我昨晚和雷斯吉宁教授一起吃了饭，谈了留学的事情。”  
 “啊，又是那件事啊……”  
-现在，我和雷斯吉宁教授会定期联系。当然，比屋定来日本的事情，教授也知道，昨天还给我看了比屋定从冲绳发来的照片。画面中，比屋定一脸死板地站在浪花中，大概是家人或者朋友拍的吧。席间，雷斯吉宁教授诚心地邀请我去维克多·孔多利亚大学留学，就此商谈的最低条件，是从现在的大学毕业，然后通过维克多·孔多利亚大学的留学测试。  
+现在，我和雷斯吉宁教授会定期联系。当然，真帆来日本的事情，教授也知道，昨天还给我看了真帆从冲绳发来的照片。画面中，真帆一脸死板地站在浪花中，大概是家人或者朋友拍的吧。席间，雷斯吉宁教授诚心地邀请我去维克多·孔多利亚大学留学，就此商谈的最低条件，是从现在的大学毕业，然后通过维克多·孔多利亚大学的留学测试。  
 “因为机会难得，所以也向教授介绍了你的事情。他对你也挺感兴趣。”  
 “诶？我？”  
 “维克多·孔多利亚大学有一个【情报科学研究所】，听说聚集了世界顶尖的黑客，以你的水平一定可以加入。”  
@@ -98,7 +98,7 @@
  你是笨蛋吗？那种不亲身经历一次就不会懂的笨蛋吗？！”  
 
 “笨蛋的是你啊，冈部伦太郎！”  
-背后突然传来一个饱含怒气的女声。转过身一看，发现比屋定真帆正在瞪着我。  
+背后突然传来一个饱含怒气的女声。转过身一看，发现真帆真帆正在瞪着我。  
 
 ![](../static/image/0154-2.png)
 
@@ -108,7 +108,7 @@
 “啊、那个！这是……一时冲动……！不要一直盯着看！我起诉你哦！”  
 “是你自己这幅打扮冲出来的吧！”  
 “等、等一下，我现在就穿衣服！”  
-比屋定慌慌张张地钻回了淋浴间。  
+真帆慌慌张张地钻回了淋浴间。  
 
 
 <br/>
