--- a/article/sg0/doc/0156.md
+++ b/article/sg0/doc/0156.md
@@ -1,13 +1,13 @@
 # 无限远点的牵牛星 - 04
 > 1.129954  
-> [ 2011/07/07 ] 比屋定并未放弃，坚持说服冈伦。谈论到关键的时候，收到了琉华子发来的 RINE，说看到真由理哭着跑开了。冈伦猜到真由理听到了 α 世界线的事，立刻追了出去。  
+> [ 2011/07/07 ] 真帆并未放弃，坚持说服冈伦。谈论到关键的时候，收到了琉华子发来的 RINE，说看到真由理哭着跑开了。冈伦猜到真由理听到了 α 世界线的事，立刻追了出去。  
 
 | [←prev](./0155) | [menu](../) | [next→](./0157) |
 
 ---
 
 “冈部先生。”  
-比屋定追了过来，因为势头太猛，差点撞上来。  
+真帆追了过来，因为势头太猛，差点撞上来。  
 “你觉得命运石之门，真的存在吗？  
  真由理小姐没有死去……并且，红莉栖也没有牺牲，这样狭缝中的世界线，你觉得存在吗？”  
 “如果你想知道，曾经以此为目标的我究竟经历了什么，就去问铃羽吧。  
@@ -16,7 +16,7 @@
 “那不就是<abbr title="拉丁语：probatio diabolica，表示一个极难完成的证明。比如证明不存在，因为证明存在只需要举出一个正面例子，而证明不存在却需要排除所有反面例子。在辩论中使用，则是迫使对方证明己方观点的反面，否则代表己方观点成立。这实际上是将举证义务转移给了对方，而对方却很难完成证明。比如，我说你做了某事，如果你不能证明你没做，那就代表你做了。所以在法律讨论中，才需要“谁主张，谁举证”。">‘恶魔的证明’</abbr>吗？谁都不可能给得出。”  
 “是啊，明明还没有证明它存在或者不存在，你却……仅仅失败一次就放弃了……真让人失望。”  
 “什、么……？！”  
-这一句话，差点让我失控，想要动手抓住比屋定的肩膀。不过我总算努力控制住了自己。  
+这一句话，差点让我失控，想要动手抓住真帆的肩膀。不过我总算努力控制住了自己。  
 “我刚刚说了吧？我已经挑战了几次、几十次、几百次——”  
 “我也说了吧？那根本不是什么‘神’的至理。”  
  世界线也好，时间机器也好，命运石之门什么的也好——  
@@ -29,11 +29,11 @@
 “不，我已经经历到吐了，失败、挫折、后悔、还有痛苦，因为那位名为牧濑红莉栖的天才……”  
 “公式不会有感情啊！”  
 “最终解出公式的，是人类啊！”  
-我和比屋定瞪着彼此，距离近到几乎要吻上。只是正面对上她那慑人的眼神，就感觉内心某处要被击溃了，于是不禁移开了视线。  
+我和真帆瞪着彼此，距离近到几乎要吻上。只是正面对上她那慑人的眼神，就感觉内心某处要被击溃了，于是不禁移开了视线。  
 
-我沉默地转过身，打开玄关大门准备离开。可是出乎意料的，比屋定抓住了我的衣角。  
+我沉默地转过身，打开玄关大门准备离开。可是出乎意料的，真帆抓住了我的衣角。  
 “……还有什么事吗？”  
-我不愉快地回头看去，刚刚还气势十足的比屋定脸上，浮现出悲伤的笑容。那一瞬间，我甚至产生了世界线变动了的错觉。我目瞪口呆，比屋定却轻柔地说：  
+我不愉快地回头看去，刚刚还气势十足的真帆脸上，浮现出悲伤的笑容。那一瞬间，我甚至产生了世界线变动了的错觉。我目瞪口呆，真帆却轻柔地说：  
 “你才是，不擅长说谎呢。”  
 “……说谎？”  
 我说了什么谎……？我揣摩着这句话的意思，不自觉地摸了摸自己的脸。即使这么做，我也没办法弄明白自己的表情，只有茫然。  
@@ -46,7 +46,7 @@
 “比起红莉栖，我在验证实验上输了，论文的评价上输了，名声上也一直输着。  
  每次我都一蹶不振，觉得自己已经没用了……  
  但是，每次在最后，我都对着镜中的自己呵斥道——”  
-比屋定用食指“咻”的一下，指着自己心脏的位置。  
+真帆用食指“咻”的一下，指着自己心脏的位置。  
 “‘放弃挑战的话就真的结束了，就永远也赢不了了。’”  
 然后，她用食指，指着我的左胸。  
 “现在的你，和那时候的我，是一样的表情……  
@@ -66,7 +66,7 @@
 “我再说一遍，所有的世界至理，都不过是区区公式，必然存在着解法。  
  所以我无论如何都会找出来——那个并没有‘神’的存在，仅靠公式就能解开的钥匙。  
  然后，一定找到那条，通往真由理小姐不会死……红莉栖也活着的、狭缝间的世界线的道路。”  
-或许是一口气说完的原因，比屋定呼吸急促。明明是这么娇小的身体，却有着如此巨大的气魄。我被她这段话，这份姿态折服了。  
+或许是一口气说完的原因，真帆呼吸急促。明明是这么娇小的身体，却有着如此巨大的气魄。我被她这段话，这份姿态折服了。  
 “那么，你要怎么做呢？冈部所长，这里是你的 LAB 吧？所长总是不在，太不像话了吧。”  
 “我……我……！”  
 
@@ -76,7 +76,7 @@
  她一边哭一边跑开了！  
  我第一次见到那么伤心的真由理酱！』  
 “诶？”  
-真由理哭了……？光看文字就感觉不是一般的事态。比屋定见我不说话，就探头过来看消息的内容。我微微侧过手机方便她看，然后发消息询问琉华子：  
+真由理哭了……？光看文字就感觉不是一般的事态。真帆见我不说话，就探头过来看消息的内容。我微微侧过手机方便她看，然后发消息询问琉华子：  
 「哭了！？发生什么事了！？」
 『我也不清楚！  
  偶遇了真由理酱，就跟她打了个招呼  
@@ -89,14 +89,14 @@
  怎么办，冈部先生？  
  我该怎么办？』  
 “……怎么……会？”  
-我和比屋定对视了一眼。  
+我和真帆对视了一眼。  
 “难道……刚才的对话……被她听到了吗……？”  
 “说起来……”  
 不知什么时候，桶子从淋浴间出来了，站在我的背后。  
 “告诉我冈伦要来 LAB 的就是真由喜……她也说她在来这里的路上。”  
 那么，正好赶上了吗……？非常有可能啊！”  
 “怎、怎么会这样……”  
-有一种脚下的地面正在崩溃的错觉。基于红莉栖的牺牲，真由理才得以存在的这条世界线——唯独这个真相是绝对不能让真由理知道的。除了我，还有桶子、铃羽、菲莉丝、比屋定。所有知道这个真相的人，都在隐瞒这件事。  
+有一种脚下的地面正在崩溃的错觉。基于红莉栖的牺牲，真由理才得以存在的这条世界线——唯独这个真相是绝对不能让真由理知道的。除了我，还有桶子、铃羽、菲莉丝、真帆。所有知道这个真相的人，都在隐瞒这件事。  
 必须去找她——必须去找真由理，现在不能让她一个人独处。  
 “可恶！”  
 我冲出了 LAB。  
