--- a/article/sg0/doc/0158.md
+++ b/article/sg0/doc/0158.md
@@ -1,6 +1,6 @@
 # 无限远点的牵牛星 - 06
 > 1.129954  
-> [ 2011/07/07 ] 哪里都找不到真由理。这时冈伦、桶子、比屋定三人发现，手机全都没有信号，联想到 α 世界线的恐怖袭击，有种不详的预感。@ch 上看到“红莉栖”发来的消息，怀疑时间机器的情报泄露。想要联系『Amadeus』，发现维克多·孔多利亚大学的程序和记忆数据在任何地方都不存在。  
+> [ 2011/07/07 ] 哪里都找不到真由理。这时冈伦、桶子、真帆三人发现，手机全都没有信号，联想到 α 世界线的恐怖袭击，有种不详的预感。@ch 上看到“红莉栖”发来的消息，怀疑时间机器的情报泄露。想要联系『Amadeus』，发现维克多·孔多利亚大学的程序和记忆数据在任何地方都不存在。  
 
 | [←prev](./0157) | [menu](../) | [next→](./0159) |
 
@@ -70,7 +70,7 @@
 “什！时间机器的情报泄露了吗？”  
 “话说，为什么『Amadeus』知道时间机器的情报呢？冈伦你说的吗？”  
 到底是怎么回事呢？印象中，担任测试员期间，我没有跟‘红莉栖’说过。但是……不，现在不是深究的时候。  
-“比屋定，你能够访问『Amadeus』吗？”  
+“比屋定小姐，你能够访问『Amadeus』吗？”  
 “虽然违反规定……但是现在不是考虑这种事的时候呢。  
  桥田先生，这台电脑可以借我用一下吗？”  
 真帆和桶子换了个位置，从 LAB 的电脑连接上了脑科学研究所的计算机，输入了“Salieri”——她的账号和密码。按下回车键，可是，『Amadeus』没有出现。  
@@ -84,7 +84,7 @@
 “桶子，黑进去！  
  不仅是脑科学研究所，维克多·孔多利亚大学的所有数据，从服务器到个人电脑，都给它撬开。”  
 “*Okey-dokey!*”  
-“比屋定也来帮忙，拜托了。”  
+“比屋定小姐也来帮忙，拜托了。”  
 “……嗯、嗯。”  
 
 但结果还是一样。维克多·孔多利亚大学从服务器到个人电脑，都找不到『Amadeus』的“红莉栖”和“真帆”，无影无踪，不留一丝痕迹。  
@@ -99,7 +99,7 @@
 
 “总之，我先去广播会馆。如果‘红莉栖’的警告是真的，被盯上的就是那里。”  
 “我也去——”  
-“你和比屋定留在这里收集情报！而且真由理说不定会回来！但要记住，一旦发生什么立刻逃跑！”  
+“你和比屋定小姐留在这里收集情报！而且真由理说不定会回来！但要记住，一旦发生什么立刻逃跑！”  
 我交代完，立刻冲出 LAB 奔向广播会馆。  
 
 
