更新简介，这一章有不确定内容。

--- a/article/sg0/doc/0157.md
+++ b/article/sg0/doc/0157.md
@@ -1,6 +1,7 @@
 # 无限远点的牵牛星 - 05
 > 1.129954  
 > [ 2011/07/07 铃羽视角 ] 真由理来到时间机器处找到铃羽，得知了一切真相。她明确了自己的心意，想要再次见到凤凰院凶真，决定去执行铃羽构思的作战「牵牛星的复活」。这时铃羽收到了一封来自未来的视频邮件。  
+> 在铃羽检修时间机器时，发现桶子在主控电脑核心处藏了一个硬盘，以防被其他人发现。然而根据 0141，在桶子的秘密基地被桐生萌郁带队袭击时，红莉栖的笔记本电脑和硬盘应该俄罗斯的武装部队物理毁灭了。所以不确定这里藏的硬盘是什么，是之前只破坏了笔记本电脑，移动硬盘被桶子私藏了，还是桶子有额外的备份，亦或只是单纯的秘密资料之类的。  
 
 | [←prev](./0156) | [menu](../) | [next→](./0158) |
 
@@ -9,9 +10,9 @@
 “呼——还是这么热呢。”  
 时间已经快到下午 6 点，夏至后的太阳，虽然终于躲进了建筑的另一边，天空稍微浑浊的蓝色中，仍然渲染着一抹暗红色。这几天，铃羽都在仔细地保养位于广播会馆楼顶的时间机器。出发前往过去的时刻已然临近，对机器的保养也自然更加用心，连原本稍微脏点也没关系的部件，也擦得闪闪发亮。  
 （是不是太过头了……我果然在不安吗？）  
-结束保养后，铃羽整理了工具收纳箱，把箱子放进时间机器的驾驶舱中收好，然后坐在操作席上，再次确认了剩余电量。考虑剩余的燃料，计算得出，再过大概一个月，就不够回到“2010 年 7 月 28 日”，这就是铃羽能够留在这个时代的剩余时间。结果，可能无法像当初计划的那样，把冈伦叔叔带回过去。那样的话，铃羽只能试着独自一人去挑战，在这一年里学到的、自己计划的“某个任务”。  
+结束保养后，铃羽整理了工具收纳箱，把箱子放进时间机器的驾驶舱中收好，然后坐在驾驶席上，再次确认了剩余电量。考虑剩余的燃料，计算得出，再过大概一个月，就不够回到“2010 年 7 月 28 日”，这就是铃羽能够留在这个时代的剩余时间。结果，可能无法像当初计划的那样，把冈伦叔叔带回过去。那样的话，铃羽只能试着独自一人去挑战，在这一年里学到的、自己计划的“某个任务”。  
 “说起来……即使是爸爸……这也是不行的吧。”  
-铃羽苦笑着，把手伸进了电脑的核心所在。放在那里的外置硬盘，怎么看都不像 2036 年的科技，而像是现在——2011 年的东西。应该是桶子瞒着铃羽偷偷放在这里的，不过铃羽一下子就看到了液晶触摸屏上，弹出了“驾驶舱内探测到异物”的警告。这台先进的机器不花一秒就识破了 21 世纪初的伪装。从伪装的布线可以看出，桶子的目的不是为了监视和获得数据，应该是为了不让这个硬盘被其他人发现，所以偷偷藏在这里。出发前都要装作没发现那东西吗……  
+铃羽苦笑着，把手伸进了主控电脑的核心所在。放在那里的外置硬盘，怎么看都不像 2036 年的科技，而是现在——2011 年的东西，应该是桶子瞒着铃羽偷偷放在这里的。铃羽一启动时间机器，液晶触摸屏上就弹出了“驾驶舱内探测到异物”的警告。这台先进的机器不花一秒就识破了 21 世纪初的伪装。作为伪装的数据线并没有连接到主控电脑上，可以看出，桶子的目的不是为了监视或者得到数据，应该只是为了不让这个硬盘被其他人发现，所以偷偷藏在这里。出发前都要装作没发现那东西吗……  
 
 正考虑着这些事情的时候，铃羽听到外面沉重的铁门打开的声音。  
 有谁来了！铃羽迅速从枪套中拔出手枪，在驾驶舱中窥探铁门的方向。前几天才发生篝的事件，还是小心为妙。不过，看清来人的面容，铃羽立刻解除了警戒状态。  
